<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/all"
            android:title="@string/all"
            android:icon="@drawable/ic_video_library_black_24dp" />
        <item
            android:checked="true"
            android:id="@+id/type"
            android:icon="@drawable/ic_video_library_black_24dp"
            android:title="@string/type" />
        <item
            android:id="@+id/level"
            android:icon="@drawable/ic_video_library_black_24dp"
            android:title="@string/level" />
        <item
            android:id="@+id/goal"
            android:icon="@drawable/ic_video_library_black_24dp"
            android:title="@string/goal" />
        <item
            android:id="@+id/duration"
            android:icon="@drawable/ic_video_library_black_24dp"
            android:title="@string/duration" />
    </group>
    <item android:title="@string/system">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@mipmap/ic_information_outline_grey600_24dp"
                android:title="@string/action_about" />
            <item
                android:id="@+id/setting"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/settings" />
        </menu>
    </item>
</menu>
