<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:id="@+id/relativeLayout1">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:background="@color/colorPrimary" />

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22dp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/app_icon"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/app_description"
            android:lines="3"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_below="@id/app_name"
            android:layout_centerHorizontal="true" />

        <View
            android:layout_below="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/elevation" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/about_1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                card_view:cardCornerRadius="2dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="5dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/hiep"
                    app:border_color="@color/timestamp"
                    app:border_width="2dp" />

                <TextView
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hoang Hiep"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="150dp" />

                <TextView
                    android:fontFamily="sans-serif-thin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_description_1"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="150dp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/about_googleplay"
                android:layout_below="@id/about_1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                card_view:cardCornerRadius="2dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="#00BED4"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/ic_googleplay"
                    android:contentDescription="googlePlay" />

                <TextView
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_googleplay"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:gravity="center_horizontal" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/about_google"
                android:layout_below="@id/about_googleplay"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                card_view:cardCornerRadius="2dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="#FF7043"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/ic_googleplus" />

                <TextView
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/googleplus"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:lines="2"
                    android:layout_gravity="center"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="30dp" />
            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/about_google"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_margin="5dp"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/eng" />

                    <TextView
                        android:fontFamily="sans-serif-light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="English"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_margin="5dp"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/vn" />

                    <TextView
                        android:fontFamily="sans-serif-light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Vietnam"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp" />
                </android.support.v7.widget.CardView>
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>